* do not insert break opportunities into bare URL with `nobreak` role

Improvements::

* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons
* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved

Bug Fixes::

* correctly map all icons from FontAwesome 4 (#2373)
* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)

== 2.3.11 (2024-01-23) - @mojavelinux

Enhancements::

* upgrade prawn-svg dependency to 0.33.x (PR #2469)

Improvements::

* extract shared `smallcaps` method from `TextTransform#smallcaps_pcdata` to make it easier to override
* assign node to `@node` instance variable on table instance to make it easer to access from Prawn::Table extension (#2471)

Bug Fixes::

* ensure color spaces are set on page before adding running content (#2477)

=== Details

{url-repo}/releases/tag/v2.3.11[git tag] | {url-repo}/compare/v2.3.10\...v2.3.11[full diff]

== 2.3.10 (2023-12-04) - @mojavelinux

Bug Fixes::

* show dot leaders in TOC entry if toclevels is increased for a given section (#2441)
* decouple tests from path of PWD (#2444)
* consider inherited styles when analyzing glyphs for fallback font support (#2463)
* add fallback character for placeholder character when using AFM font (#2453)