@@ -40,6 +40,7 @@ Improvements::
 
 Bug Fixes::
 
+* ensure indentation is preserved at page transition of index when media=prepress; prevents margin from shifting to the left (#2480)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
